plugins/screencast: Hide cursor if another window covers screencasted window

BUG: 487294