src/plugins/screencast/screencastsource.h
@@ -13,6 +13,7 @@ class QImage;
 namespace KWin
 {
 
+class Cursor;
 class GLFramebuffer;
 class GLTexture;
 
@@ -33,6 +34,11 @@ public:
 
     virtual void resume() = 0;
     virtual void pause() = 0;
+
+    virtual bool includesCursor(Cursor *cursor) const = 0;
+
+    virtual QPointF mapFromGlobal(const QPointF &point) const = 0;
+    virtual QRectF mapFromGlobal(const QRectF &rect) const = 0;
 
 Q_SIGNALS:
     void frame(const QRegion &damage);
