src/plugins/screencast/windowscreencastsource.cpp
@@ -13,6 +13,7 @@
 #include "core/rendertarget.h"
 #include "core/renderviewport.h"
 #include "effect/effect.h"
+#include "input.h"
 #include "opengl/gltexture.h"
 #include "opengl/glutils.h"
 #include "scene/itemrenderer.h"
@@ -116,6 +117,29 @@ void WindowScreenCastSource::resume()
     m_timer.start();
 
     m_active = true;
+}
+
+bool WindowScreenCastSource::includesCursor(Cursor *cursor) const
+{
+    if (Cursors::self()->isCursorHidden()) {
+        return false;
+    }
+
+    if (!m_window->clientGeometry().intersects(cursor->geometry())) {
+        return false;
+    }
+
+    return input()->findToplevel(cursor->pos()) == m_window;
+}
+
+QPointF WindowScreenCastSource::mapFromGlobal(const QPointF &point) const
+{
+    return point - m_window->clientGeometry().topLeft();
+}
+
+QRectF WindowScreenCastSource::mapFromGlobal(const QRectF &rect) const
+{
+    return rect.translated(-m_window->clientGeometry().topLeft());
 }
 
 } // namespace KWin
